extended the ethereum fetcher with security, proper response format and dockerization