@@ -1,20 +1,24 @@
 package com.rachev.ethereumfetcher.service;
 
 import com.rachev.ethereumfetcher.entity.Transaction;
-import com.rachev.ethereumfetcher.model.TransactionDto;
-import com.rachev.ethereumfetcher.model.TransactionsDto;
+import com.rachev.ethereumfetcher.entity.User;
+import com.rachev.ethereumfetcher.model.transaction.TransactionsDto;
+import com.rachev.ethereumfetcher.model.transaction.UnifiedTransactionDto;
 import com.rachev.ethereumfetcher.repository.TransactionRepository;
 import com.rachev.ethereumfetcher.service.base.EthereumNodeRequestSender;
 import com.rachev.ethereumfetcher.service.base.TransactionService;
+import com.rachev.ethereumfetcher.service.base.UserService;
 import com.rachev.ethereumfetcher.util.RlpDecoderUtil;
+import io.micrometer.common.util.StringUtils;
+import jakarta.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
+import lombok.Synchronized;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,37 +34,54 @@ public class TransactionServiceImpl implements TransactionService {
 
     private final ModelMapper modelMapper;
 
+    private final UserService userService;
+
     @Override
     @Transactional
-    public TransactionsDto getTransactionsByHashes(final String rlpHex) {
-        List<TransactionDto> transactions = rlpDecoderUtil.decodeRlpToList(rlpHex).stream()
-                .map(hash -> transactionRepository.findByHash(hash)
+    @Synchronized
+    public TransactionsDto getTransactionsByHashes(final String rlpHex, @Nullable String network, String currentPrincipalUsername) {
+        if (StringUtils.isBlank(rlpHex)) {
+            return getMyTransactions(currentPrincipalUsername);
+        }
+        User authenticatedPrincipal = userService.getUserByUsername(currentPrincipalUsername);
+        List<UnifiedTransactionDto> transactions = rlpDecoderUtil.decodeRlpToList(rlpHex).stream()
+                .map(hash -> transactionRepository.findByTransactionHash(hash)
                         .orElseGet(() -> {
-                            TransactionDto transactionDto = ethereumNodeRequestSender.getTransactionByHashFromEthereumNode(hash);
-                            if (transactionDto != null) {
-                                return saveTransaction(transactionDto);
-                            }
-                            return null;
+                            UnifiedTransactionDto transactionDto = ethereumNodeRequestSender.getTransactionByHash(hash, network);
+                            return transactionDto == null ? null : saveTransaction(transactionDto);
                         }))
                 .filter(Objects::nonNull)
-                .map(transaction -> modelMapper.map(transaction, TransactionDto.class))
-                .collect(Collectors.toList());
+                .peek(authenticatedPrincipal::linkTransaction)
+                .map(transaction -> modelMapper.map(transaction, UnifiedTransactionDto.class))
+                .onClose(() -> userService.updateUser(authenticatedPrincipal))
+                .toList();
         return TransactionsDto.builder()
-                .transactions(transactions)
+                .transactions(new LinkedHashSet<>(transactions))
                 .build();
     }
 
-    private Transaction saveTransaction(TransactionDto transactionDto) {
+    private Transaction saveTransaction(UnifiedTransactionDto transactionDto) {
         return transactionRepository.save(modelMapper.map(transactionDto, Transaction.class));
     }
 
     @Override
     public TransactionsDto getAllTransactions() {
-        List<TransactionDto> transactions = transactionRepository.findAll().stream()
-                .map(transaction -> modelMapper.map(transaction, TransactionDto.class))
-                .collect(Collectors.toList());
+        List<UnifiedTransactionDto> transactions = transactionRepository.findAll().stream()
+                .map(transaction -> modelMapper.map(transaction, UnifiedTransactionDto.class))
+                .toList();
         return TransactionsDto.builder()
-                .transactions(transactions)
+                .transactions(new LinkedHashSet<>(transactions))
+                .build();
+    }
+
+    @Override
+    public TransactionsDto getMyTransactions(String username) {
+        return TransactionsDto.builder()
+                .transactions(userService.getUserByUsername(username)
+                        .getTransactions()
+                        .stream()
+                        .map(transaction -> modelMapper.map(transaction, UnifiedTransactionDto.class))
+                        .collect(Collectors.toCollection(() -> new TreeSet<>(Comparator.comparing(UnifiedTransactionDto::getLogsCount)))))
                 .build();
     }
 }
